syntax = "proto3";

package workers_management_service;

option go_package = "github.com/example/workers-management-service/proto";

service AuthManagementService {
  rpc RegisterWorker (RegisterWorkerRequest) returns (RegisterWorkerResponse);
  rpc LoginWorker (LoginWorkerRequest) returns (LoginWorkerResponse);
  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc VerifyOTP (VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

message RegisterWorkerRequest {
  string name = 1;
  string email = 2;
  string phone_number = 3;
  string password = 4;
}

message RegisterWorkerResponse {
  string id = 1;
  string message = 2;
}

message LoginWorkerRequest {
  string email = 1;
  string password = 2;
}

message LoginWorkerResponse {
  string id = 1;
  string message = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message VerifyOTPRequest {
  string email = 1;
  string otp_code = 2;
}

message VerifyOTPResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}
